force-app/main/default/objects/Directive_Action_Run__c/Directive_Action_Run__c.object-meta.xml
<CustomObject>
    <description>Directive Action Run</description>
    <label>Action Run</label>
    <nameField>
        <displayFormat>AR-{0000000}</displayFormat>
        <label>Action Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>