force-app/main/default/objects/Directive_Action_Run__c/fields/Approval_State__c.field-meta.xml
<CustomField>
    <fullName>Approval_State__c</fullName>
    <label>Approval State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Not_Required</fullName><default>true</default><label>Not_Required</label></value>
            <value><fullName>Pending</fullName><default>false</default><label>Pending</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>