force-app/main/default/objects/Directive_Action_Run__c/fields/Input_Payload__c.field-meta.xml
<CustomField>
    <fullName>Input_Payload__c</fullName>
    <label>Input Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>