force-app/main/default/objects/Directive_Action_Run__c/fields/Preflight_Result__c.field-meta.xml
<CustomField>
    <fullName>Preflight_Result__c</fullName>
    <label>Preflight Result</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>