force-app/main/default/objects/Directive_Action_Run__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <label>Requested By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Requested Action Runs</relationshipLabel>
    <relationshipName>Requested_Action_Runs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>