force-app/main/default/objects/Directive_Action_Run__c/fields/Requested_Source__c.field-meta.xml
<CustomField>
    <fullName>Requested_Source__c</fullName>
    <label>Requested Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>User</fullName><default>true</default><label>User</label></value>
            <value><fullName>Agentforce</fullName><default>false</default><label>Agentforce</label></value>
            <value><fullName>System</fullName><default>false</default><label>System</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>