force-app/main/default/objects/Directive_Action_Run__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Success</fullName><default>false</default><label>Success</label></value>
            <value><fullName>Failure</fullName><default>false</default><label>Failure</label></value>
            <value><fullName>Partial</fullName><default>false</default><label>Partial</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>