force-app/main/default/objects/Directive_Action_Run__c/fields/Rollback_State__c.field-meta.xml
<CustomField>
    <fullName>Rollback_State__c</fullName>
    <label>Rollback State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>None</fullName><default>true</default><label>None</label></value>
            <value><fullName>Rolled_Back</fullName><default>false</default><label>Rolled_Back</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>